fix overflow in mainpage

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -16,6 +16,9 @@ html,body
 .card
 	height: 100%
 
+.no-overflow
+  overflow: hidden
+
 .author-image
   position: absolute
   top: -30px
